# lastfm-recommendation-engine

./: .gitignore  README.md  app.py  fruits.csv  main.py  old.logic.py  pyproject.toml
