[project]
name = "playlist-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "pylast>=7.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "tqdm>=4.68.3",
]
